Invoice: Fixed bg color and alignment of line item total column

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5106,3 +5106,6 @@ span.label-font{
   background-color: #fff;
 }
 
+.align_right{
+  text-align: right !important;
+}
